refactor: change project

--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
             <div class="tab-list-forecast">
               <div class="forecast-block">
                 <div class="forecast-item-block">
-                  <span class="forecast-item forecast-date">17 May</span>
-                  <span class="forecast-item forecast-time">12:00</span>
+                  <span class="forecast-item forecast-date">Date</span>
+                  <span class="forecast-item forecast-time">Time</span>
                 </div>
                 <div class="forecast-item-block">
                   <span class="forecast-item forecast-temperature"
-                    >Temperature: 13&deg; <br />
-                    Feels like: 10&deg;</span
+                    >Temperature<br />
+                    Feels like</span
                   >
                   <span class="forecast-item forecast-state"
-                    >Rain <br />
+                    >Weather <br />
                     <img
                       src="./assets/img/weather-condition/rain.svg"
                       alt="icon-item"
@@ -83,16 +83,16 @@
               </div>
               <div class="forecast-block">
                 <div class="forecast-item-block">
-                  <span class="forecast-item forecast-date">17 May</span>
-                  <span class="forecast-item forecast-time">15:00</span>
+                  <span class="forecast-item forecast-date">Date</span>
+                  <span class="forecast-item forecast-time">Time</span>
                 </div>
                 <div class="forecast-item-block">
                   <span class="forecast-item forecast-temperature"
-                    >Temperature: 13&deg; <br />
-                    Feels like: 10&deg;</span
+                    >Temperature<br />
+                    Feels like</span
                   >
                   <span class="forecast-item forecast-state"
-                    >Rain <br />
+                    >Weather <br />
                     <img
                       src="./assets/img/weather-condition/rain.svg"
                       alt="icon-item"
@@ -102,16 +102,16 @@
               </div>
               <div class="forecast-block">
                 <div class="forecast-item-block">
-                  <span class="forecast-item forecast-date">17 May</span>
-                  <span class="forecast-item forecast-time">18:00</span>
+                  <span class="forecast-item forecast-date">Date</span>
+                  <span class="forecast-item forecast-time">Time</span>
                 </div>
                 <div class="forecast-item-block">
                   <span class="forecast-item forecast-temperature"
-                    >Temperature: 13&deg; <br />
-                    Feels like: 10&deg;</span
+                    >Temperature<br />
+                    Feels like</span
                   >
                   <span class="forecast-item forecast-state"
-                    >Rain <br />
+                    >Weather <br />
                     <img
                       src="./assets/img/weather-condition/rain.svg"
                       alt="icon-item"
